tests/ui/server_send/error/has-too-many-arguments.stderr
warning: unused variable: `meta_args`
  --> src/lib.rs
   |
   |     let mut meta_args = syn::parse_macro_input!(meta as crate::server_send::parse::Args);
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_meta_args`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
  --> src/lib.rs
   |
   |     let mut meta_args = syn::parse_macro_input!(meta as crate::server_send::parse::Args);
   |         ----^^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error: this attribute takes from one to three assign arguments

         = help: use `#[server_send(level=Level::WARN, name="Name", skip=[a, b])]`

 --> tests/ui/server_send/error/has-too-many-arguments.rs:4:1
  |
4 | #[server_send(level=trace, name="B", skip="self", target="bulls-eye")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `server_send` (in Nightly builds, run with -Z macro-backtrace for more info)
